# sizr

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
src/: lib.rs  main.rs
