[package]
name = "sizr"
version = "0.1.5"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
description = "A fast, Rust-based tool to analyze file system usage with colorful output, file aggregation, exclusions, and directory comparisons."
homepage = "https://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/sizr"
categories = ["command-line-utilities"]
keywords = ["du", "cli", "disk", "disk-usage"]
license = "MIT"
exclude = ["test/*"]
edition = "2018"
readme = "README.md"

[dependencies]
getopts = "0.2.21"
regex = "1.3.9"
signal-hook = "0.1.10"
terminal_size = "0.4.1"
unicode-width = "0.2.1"
unicode-segmentation = "1.2.0"
arc-swap = "1.7.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
